--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,9 +76,9 @@ jobs:
           aws-region: us-east-1
       - name: Deploy to S3
         run: |
-          aws s3 sync ./output s3://chrisdempewolf.com --size-only --delete
+          aws s3 sync ./output s3://chrisdempewolf.com --size-only --delete | tee s3-log.txt
         shell: bash
       - name: Invalidate cache
         run: |
-          aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths "/*"
+          aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths "$(awk '$1 ~ /upload/ {print $4}' s3-log.txt | sed 's|s3://chrisdempewolf.com||' | jq -R -s -c 'split(\"\n\") | map(select(length > 0))')"
         shell: bash
