--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,6 +78,6 @@ jobs:
         shell: bash
       - name: Invalidate cache
         run: |
-          paths=$(awk '$1 ~ /upload/ {print $4}' s3-log.txt | sed 's|s3://chrisdempewolf.com||' | jq -R -s -c 'split(\"\n\") | map(select(length > 0))')
+          paths=$(awk '$1 ~ /upload/ {print $4}' s3-log.txt | sed 's|s3://chrisdempewolf.com||' | jq -R -s -c 'split("\n") | map(select(length > 0))')
           aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths "$paths"
         shell: bash
