--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,5 +79,6 @@ jobs:
       - name: Invalidate cache
         run: |
           paths=$(awk '$1 ~ /upload/ {print $4}' s3-log.txt | sed 's|s3://chrisdempewolf.com||' | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          echo $paths
           aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths "$paths"
         shell: bash
