--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,7 +74,7 @@ jobs:
           aws-region: us-east-1
       - name: Deploy to S3
         run: |
-          aws s3 sync ./output s3://chrisdempewolf.com --size-only --delete 2>&1 | tee s3-log.txt
+          stdbuf -oL -eL aws s3 sync ./output s3://chrisdempewolf.com --size-only --delete 2>&1 | tee s3-log.txt
         shell: bash
       - name: Invalidate cache
         run: |
