--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,15 +78,8 @@ jobs:
         shell: bash
       - name: Invalidate cache
         run: |
-          du -chs s3-log.txt
-          awk -F' ' '$1 ~ /upload/ {print $4}' s3-log.txt
-          awk --version
-          awk -F' ' '{print $1 $2 $3 $4}' s3-log.txt
-          awk -F' ' '{print $0}' s3-log.txt
-          awk '$1 ~ /upload/ {print $4}' s3-log.txt | sed 's|s3://chrisdempewolf.com||' | jq -R -s -c 'split("\n") | map(select(length > 0))'
-          paths=$(awk '$1 ~ /upload/ {print $4}' s3-log.txt | sed 's|s3://chrisdempewolf.com||' | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          paths=$(cat s3-log.txt | sed 's|\r|\n|g' | awk '$1 ~ /upload/ {print $4}' | sed 's|s3://chrisdempewolf.com||' | jq -R -s -c 'split("\n") | map(select(length > 0))')
           echo $paths
-          cat s3-log.txt | sed 's|\r|\n|g' | awk -F' ' '$1 ~ /upload/ {print $4}'
           if [ "$paths" != "[]" ]; then
             aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths "$paths"
           fi
