--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,7 +78,7 @@ jobs:
         shell: bash
       - name: Invalidate cache
         run: |
-          paths=$(cat s3-log.txt | sed 's|\r|\n|g' | awk '$1 ~ /upload/ {print $4}' | sed 's|s3://chrisdempewolf.com||' | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          paths=$(cat s3-log.txt | sed 's|\r|\n|g' | awk '$1 ~ /upload/ {print $4}' | sed 's|s3://chrisdempewolf.com||' | sed 's|^|"|' | sed 's|$|"|' | tr '\n' ',')
           echo $paths
           if [ "$paths" != "[]" ]; then
             aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths "$paths"
