--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,13 +74,12 @@ jobs:
           aws-region: us-east-1
       - name: Deploy to S3
         run: |
-          aws s3 sync ./output s3://chrisdempewolf.com --size-only --delete 2>&1 | tee s3-log.txt
+          aws s3 sync ./output s3://chrisdempewolf.com --size-only --delete 2>&1 | sed 's|\r|\n|g' | tee s3-log.txt
         shell: bash
       - name: Invalidate cache
         run: |
-          readarray -t paths < <(cat s3-log.txt | sed 's|\r|\n|g' | awk '$1 ~ /upload/ {print $4}' | sed 's|s3://chrisdempewolf.com||' | sed 's|^|"|' | sed 's|$|"|')
-          echo $paths
-          if [ "$paths" != "" ]; then
-            aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths "$paths"
+          cat s3-log.txt
+          if [ grep -q '^uploaded' s3-log.txt ]; then
+            aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths $(cat s3-log.txt | awk '$1 ~ /upload/ {print $4}' | sed 's|s3://chrisdempewolf.com||' | tr '\n' ' ')
           fi
         shell: bash
