remove test brackets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,9 +79,7 @@ jobs:
       - name: Invalidate cache
         run: |
           cat s3-log.txt
-          grep --version
-          grep --help
-          if [ grep '^uploaded' s3-log.txt > /dev/null ]; then
+          if grep -q '^uploaded' s3-log.txt; then
             aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths $(cat s3-log.txt | awk '$1 ~ /upload/ {print $4}' | sed 's|s3://chrisdempewolf.com||' | tr '\n' ' ')
           fi
         shell: bash
