prohibit empty cache invalidations

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,6 +79,8 @@ jobs:
       - name: Invalidate cache
         run: |
           cat s3-log.txt
-          aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths $(cat s3-log.txt | awk '$1 ~ /upload/ {print $4}' | sed 's|s3://chrisdempewolf.com||' | tr '\n' ' ')
-#          grep -q '^uploaded' s3-log.txt && aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths $(cat s3-log.txt | awk '$1 ~ /upload/ {print $4}' | sed 's|s3://chrisdempewolf.com||' | tr '\n' ' ')
+          
+          if [ $(wc -c < /path/to/file) -ne 0 ]; then
+              aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths $(cat s3-log.txt | awk '$1 ~ /upload/ {print $4}' | sed 's|s3://chrisdempewolf.com||' | tr '\n' ' ')
+          fi
         shell: bash
