--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "scrivo/highlight.php": "^9.18",
         "spatie/laravel-feed": "^4.4",
         "spatie/yaml-front-matter": "^2.0"
     },
