--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,11 @@
         "php": "^8.1",
         "ext-dom": "*",
         "ext-libxml": "*",
-        "erusev/parsedown": "^1.7",
-        "erusev/parsedown-extra": "^0.8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "michelf/php-markdown": "^2.0",
         "scrivo/highlight.php": "^9.18",
         "spatie/laravel-feed": "^4.4",
         "spatie/yaml-front-matter": "^2.0"
