--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.5.2"
     },
     "dependencies": {
+        "aws-sdk": "^2.1692.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "three": "^0.162.0"
