--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,16 +41,17 @@ jobs:
         run: curl -I http://127.0.0.1:8000
       - name: Download site using wget
         run: |
-          wget --server-response \
-               --directory-prefix=output/ \
-               --html-extension \
-               --convert-links \
-               --recursive \
-               --level=10 \
-               --page-requisites \
-               --timestamping \
-               --adjust-extension \
-               --no-host-directories \
+          wget --server-response \           # Print the server’s HTTP responses
+               --directory-prefix=output/ \  
+               --regex-reject "$%7Bcomment.website.S%7D" \              
+               --html-extension \            # Ensure files without a recognizable extension (like those served as HTML but without .html in the URL) are saved with a .html extension
+               --convert-links \             # After download, go through all downloaded HTML files and convert links to point to the locally downloaded files instead of the original remote URLs
+               --recursive \                 # Follow links found on downloaded pages
+               --level=10 \                  # Max recursion depth
+               --page-requisites \     
+               --timestamping \              # If a file hasn’t changed on the server since the last download, don’t redownload it
+               --adjust-extension \          # Similar to --html-extension but slightly broader. If wget determines a file actually contains HTML, it will ensure that file is saved with a .html extension, even if it originally had none or a different extension
+               --no-host-directories \       #  Keep downloaded site’s files directly under the specified directory prefix
                http://127.0.0.1:8000 http://127.0.0.1:8000/404
       - name: Ensure .html is not appended to highlight.min.js
         run: for f in $(./assets/js/*); do curl -I http://127.0.0.1:8000/assets/js/$f; done
